--- a/src/Home.css
+++ b/src/Home.css
@@ -32,7 +32,7 @@ nav .a {
 .grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin: 0 20%;
+    margin: 0 10%;
 }
 .grided {
     display: grid;
@@ -98,6 +98,9 @@ nav .a {
     }
 }
 @media only screen and (max-width:768px) {
+    .OV {
+        overflow-x: scroll;
+    }
     .grid {
         display: grid;
         grid-template-columns: 1fr;
