--- a/src/Home.css
+++ b/src/Home.css
@@ -29,6 +29,12 @@ nav .a {
 .LG {
     border-radius: 50%;
 }
+.BTN {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+    margin: 5px 10%;
+}
 .grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -72,6 +78,7 @@ nav .a {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     margin: 1% 20%;
+    gap: 3%;
 }
 
 .bg {
@@ -98,6 +105,13 @@ nav .a {
     }
 }
 @media only screen and (max-width:768px) {
+    .BTN {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    #nav {
+        margin:0 0.5%;
+    }
     .OV {
         overflow-x: scroll;
     }
@@ -136,6 +150,101 @@ nav .a {
     .grider {
         display: grid;
         grid-template-columns: 1fr;
+    }
+    .SM {
+        margin-left: 10%;
+    }
+    .BD {
+        margin-left: 22%;
+    }
+    .one {
+        margin-left: 40%;
+    }
+    .set{
+        margin-top: 39%;
+        margin-left: 60%;
+    }
+    .sets{
+        margin-top: 0%;
+        margin-left: 0%;
+    }
+    .seg{
+        margin-top: 8%;
+        margin-left: 50%;
+    }
+    .IMG {
+        border-radius: 100%;
+        width: 50%;
+    }
+    .content-center {
+        margin-left: 25%;
+    }
+    
+}
+@media only screen and (max-width:425px) {
+    .BTN {
+        margin: 6px 5%;
+    }
+    .ZV {
+        display: flex;
+    }
+    #logo {
+        font-size: 1.5rem;
+    }
+    #logo {
+        padding: 1px;
+    }
+    .AG {
+        font-size: 1.8rem;
+    }
+    #nav {
+        margin:0%;
+    }
+    .OV {
+        overflow-x: scroll;
+    }
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .A{
+        margin-top: 5%;
+    }
+    .one {
+        display: none;
+    }
+    .w-32 {
+        display: none;
+    }
+    .gride {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin: 5% 6%;
+    }
+    .grided {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+    .text {
+        margin: 4px 10%;
+    }
+    .Zt {
+        display: none;
+    }
+    .t-0 {
+        display: none;
+    }
+    .grider {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin: 3% 5%;
+    }
+    .KS {
+        font-size: 1.5rem;
+    }
+    .AS {
+        margin: 3% 20%;
     }
     .SM {
         margin-left: 10%;
